<resources>
    <string name="app_name">CMSMantap</string>
    <!-- Strings related to login -->
    <string name="prompt_idinstitusi">ID Institusi</string>
    <string name="prompt_idpengguna">ID Pengguna</string>
    <string name="prompt_password">Password</string>
    <string name="welcome2">Selamat Datang</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="hallo">Hello!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="nama">"MAKER002"</string>
    <string name="p_pensiunan">"Payroll Pensiunan"</string>
    <string name="reject_note_notif">..........\n
         Reject Note : \n
    1.  Jumlah payroll tidak sesuai pada NIP 11011000 \n
    2.  Nomor Rekening salah pada NIP 110110022 \n
    3.  Jumlah payroll tidak sesuai pada NIP 11011000 \n
    4.  Nomor Rekening salah pada NIP 11011002
    Direject Oleh : <b>CHECKER002</b>
    </string>
    <string name="notifikasi">Notifikasi</string>
    <!-- Strings related to array at main page -->
    <string-array name="pilih_jenis">
        <item>Payroll Umum</item>
        <item>Payroll Pensiun</item>
        <item>Semua Jenis Payroll</item>
    </string-array>

    <string-array name="pilih_rek">
        <item>1090015725104 - PT BALI NUSARAYA PARAMARTHA</item>
        <item>2670288563 - PT BALI NUSARAYA PARAMARTHA</item>
        <item>2221178841 - PT BALI NUSARAYA PARAMARTHA</item>
    </string-array>
    <!-- Strings related to array at Payroll umum page -->
    <string-array name="pilih_jenis_transaksi">
        <item>Pilih Jenis Transaksi</item>
        <item>Transfer ke Bank Mandiri Taspen</item>
        <item>Transfer ke Bank Lain</item>
    </string-array>
    <string name="selected_item">Selected item:</string>
</resources>